--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
   font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  padding: 32px 0.5em 100vh 0.5em;
+  padding: 32px 0.5em 1em 0.5em;
 }
 
 cite {
