Use HTTPS for image (though image will be removed/replaced anyway)

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ pre a, pre a:link, pre a:visited, pre a:hover, pre a:active {
 
 a[href*="//"]::after,
 a.external::after {
-  content: url(http://upload.wikimedia.org/wikipedia/commons/6/64/Icon_External_Link.png);
+  content: url(https://upload.wikimedia.org/wikipedia/commons/6/64/Icon_External_Link.png);
   margin: 0 0 0 5px;
 }
 
