Space Handling / BOM - Add space handling change entry - Add headings in gedcom_line syntax section - Make BOM required (though provisional) - Adjust provisional items to correct left-border appearance when the item is a target

--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,14 @@ ul li {
   padding-left: 0.5em;
 }
 
+span.obsolete, span.provisional, span.pending-removal {
+  /*
+    hack to avoid wayward borders when
+    item with border is target
+  */
+  display: inline-block;
+}
+
 .columns {
   column-count: 1;
 }
@@ -324,6 +332,8 @@ ul li {
   font-weight: bold;
   margin: 0 0.2em;
   padding: 1px;
+  text-align: center;
+  width: 2em;
 }
 
 .fixed-menu {
